fixed z-index

--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@
     width: 260px;
     background-color: var(--bg-color);
     padding: 30px 0;
-    z-index: 9999;
+    z-index: 99;
 }
 
 .navbar {
